fix css jumping to the left

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,8 +54,8 @@ app-timezone-select {
 		}
 
     .ng-value-container .ng-input[role="combobox"] {
-      margin-left: 1rem;
       bottom: unset;
+      padding-left: 1rem;
     }
 	
 		div.ng-value-container ~ span.ng-clear-wrapper {
